--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "PyYAML>=6.0.2",
     "numpy>=1.24.4",
     "pyqtgraph",
-    "PySide6"
+    "PySide6",
+    "networkx>=3.1",
 ]
 classifiers = [
   "Programming Language :: Python :: 3.8",
